<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>ca.on.oicr.gsi</groupId>
        <artifactId>pipedev</artifactId>
        <version>2.0-SNAPSHOT</version>
    </parent>

    <artifactId>pipedev-decider-utils</artifactId>
    <packaging>jar</packaging>

    <name>pipedev-decider-utils</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <seqwareWar>${com.github.seqware:seqware-webservice:war}</seqwareWar>
        <pineryWar>${ca.on.oicr:pinery-ws:war}</pineryWar>
        <skipITs>true</skipITs>
    </properties>

    <build>
        <!--<finalName>Decider_${project.version}_${project.artifactId}_${workflow-version}_SeqWare_${seqware-version}</finalName>-->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.9</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>properties</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <argLine>-XX:PermSize=256M -XX:MaxPermSize=512M -Xmx4096M</argLine>
                    <skip>${skipITs}</skip>
                    <systemPropertyVariables>
                        <dbHost>${dbHost}</dbHost>
                        <dbPort>${dbPort}</dbPort>
                        <dbUser>${dbUser}</dbUser>
                        <dbPassword>${dbPassword}</dbPassword>
                        <seqwareWar>${seqwareWar}</seqwareWar>
                        <pineryWar>${pineryWar}</pineryWar>
                    </systemPropertyVariables>
                </configuration>
                <executions>
                    <execution>
                        <id>integration test</id>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                        <phase>integration-test</phase>
                    </execution>
                    <execution>
                        <id>verify</id>
                        <goals>
                            <goal>verify</goal>
                        </goals>
                        <phase>verify</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>ca.on.oicr.gsi</groupId>
            <artifactId>pipedev-test-utils</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>3.2.2</version>
        </dependency>
        <dependency>
            <groupId>ca.on.oicr</groupId>
            <artifactId>pinery-client</artifactId>
        </dependency>
        <dependency>
            <groupId>ca.on.oicr</groupId>
            <artifactId>pinery-service</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ca.on.oicr</groupId>
            <artifactId>pinery-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ca.on.oicr</groupId>
            <artifactId>pinery-ws</artifactId>
            <scope>test</scope>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>com.github.seqware</groupId>
            <artifactId>seqware-common</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.seqware</groupId>
            <artifactId>seqware-pipeline</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>com.github.seqware</groupId>
                    <artifactId>seqware-admin-webservice</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.hadoop</groupId>
                    <artifactId>hadoop-hdfs</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.hadoop</groupId>
                    <artifactId>hadoop-common</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.sun.jersey</groupId>
                    <artifactId>jersey-client</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.github.seqware</groupId>
            <artifactId>seqware-distribution</artifactId>
            <classifier>full</classifier>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ca.on.oicr.gsi</groupId>
            <artifactId>pipedev-provenance-impl</artifactId>
        </dependency>
        <dependency>
            <groupId>ca.on.oicr.gsi</groupId>
            <artifactId>pipedev-common</artifactId>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>com.github.seqware</id>
            <name>SeqWare Maven Repository</name>
            <url>http://seqwaremaven.oicr.on.ca/artifactory/seqware-release</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>snapshots.com.github.seqware</id>
            <name>SeqWare Maven Snapshot Repository</name>
            <url>http://seqwaremaven.oicr.on.ca/artifactory/seqware-snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>dependencies.com.github.seqware</id>
            <name>SeqWare Dependencies Maven Repository</name>
            <url>http://seqwaremaven.oicr.on.ca/artifactory/seqware-dependencies</url>
            <releases>
                <enabled>true</enabled>
            </releases>     
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>snapshots.dependencies.com.github.seqware</id>
            <name>SeqWare Dependencies Maven Snapshot Repository</name>
            <url>http://seqwaremaven.oicr.on.ca/artifactory/seqware-dependencies-snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

</project>
